--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,8 @@ jobs:
 
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '9.0.x'
 
     - name: Restore dependencies
       run: dotnet restore Projects/TKWBooking.sln
